--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!doctype html>
 <html>
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	
 <meta charset="utf-8">
 <title>Zodiacs - Home Page</title>
 <div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
-  <a href="capricorn.html">Capricorn</a>
-  <a href="aquarius.html">Aquarius</a>
-  <a href="pisces.html">Pisces</a>
-	<a href="aries.html">Aries</a>
-	<a href="taurus.html">Taurus</a>
-	<a href="gemini.html">Gemini</a>
-	<a href="cancer.html">Cancer</a>
-	<a href="leo.html">Leo</a>
-	<a href="virgo.html">Virgo</a>
-	<a href="libra.html">Libra</a>
-	<a href="scorpio.html">Scorpio</a>
-	<a href="sagittarius.html">Sagittarius</a>
+  <a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/index.html">Home</a>
+  <a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/capricorn.html">Capricorn</a>
+  <a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/aquarius.html">Aquarius</a>
+  <a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/pisces.html">Pisces</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/aries.html">Aries</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/taurus.html">Taurus</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/gemini.html">Gemini</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/cancer.html">Cancer</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/leo.html">Leo</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/virgo.html">Virgo</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/libra.html">Libra</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/scorpio.html">Scorpio</a>
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/sagittarius.html">Sagittarius</a>
 	
 </div>
 	<h1 style="color: #FFFFFF" align="left">THE ZODIACS</h1>
-<link href="Untitled-1.css" rel="stylesheet" type="text/css">
-<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/Untitled-1.css" rel="stylesheet" type="text/css">
+<link rel="shortcut icon" type="image/png" href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/favicon.png">
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alata&family=Dosis:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="Untitled-1.css">
+	<link rel="stylesheet" href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/Untitled-1.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 <body bgcolor="#00142d">
-<p><strong>The zodiacs are 12 constellations that exist in the Zodiac Belt. As the Earth rotates around the sun, we are able to see different constellations. Depending on where the Earth is when you are born, you can identify your zodiac sign, which can tell you about your personality, characteristics, and horoscope.</p>
-<img src="wheel-02-02.png" width="800" height="776" alt=""/ class="ImgMain">
+<p><strong>The zodiacs are 12 constellations that exist in the Zodiac Belt. As the Earth rotates around the sun, we are able to see different constellations. Depending on where the Earth is when you are born, you can identify your zodiac sign, which can tell you about your personality, characteristics, and horoscope.</strong></p>
+<img src="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/wheel-02-02.png" width="800" height="776" alt=""/ class="ImgMain">
 	<style>
 		
 		.ImgMain {
