--- a/aquarius.html
+++ b/aquarius.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,6 +19,7 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
+		<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 	
 </div>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,13 +35,17 @@
 <title>Aquarius</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-	<h1 class="subhead">Aquarius <em>(20th January - 18th February)</em></h1>
+	<h1 class="subhead">Aquarius</h1>
 
 <body>
-	<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/aquarius-horoscope-2023"target="_blank">2023 Horoscope for Aquarius</a><br>
+	
+	<img src="1x/Asset 18.png" alt="" width="180" height="113" class="pageimage"/>
+<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/aquarius-horoscope-2023"target="_blank">2023 Horoscope for Aquarius</a><br>
 </p>
+<p><strong>DATES</strong>: 20th January - 18th February </p>
 <p><strong>SYMBOL</strong>: The Water-bearer</p>
 <p><strong>ARCHETYPE</strong>: The Humanitarian</p>
+<img src="1x/Asset 4.png" alt="" width="380" height="203" class="aquarius"/>
 <p><strong>ELEMENT</strong>: Air</p>
 <p><strong>MODE</strong>: Fixed</p>
 <p><strong>HOUSE</strong>: 11th House of Friendship</p>
