--- a/aries.html
+++ b/aries.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,9 +19,10 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
+		<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 	
 </div>
-	<h1 class="subhead" id="yui_3_17_2_1_1676244448277_1876">Aries <em id="yui_3_17_2_1_1676244448277_1875">(21st March - 19th April)</em></h1>
+	<h1 class="subhead">Aries</h1>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -34,8 +38,11 @@
 </head>
 
 <body>
-	<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/aries-horoscope-2023"target="_blank">2023 Horoscope for Aries</a></p>
+	<img src="1x/Asset 20.png" alt="" width="130" height="121" class="aries"/>
+<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/aries-horoscope-2023"target="_blank">2023 Horoscope for Aries</a></p>
+<p><strong>DATES</strong>: 21st March - 19th April</p>
 <p><strong>SYMBOL</strong>: The Ram</p>
+<img src="1x/Asset 5.png" alt="" width="380" height="321" class="pageimage"/>
 <p><strong>ARCHETYPE</strong>: The Warrior</p>
 <p><strong>ELEMENT</strong>: Fire</p>
 <p><strong>MODE</strong>: Cardinal</p>
