--- a/cancer.html
+++ b/cancer.html
@@ -2,9 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -17,9 +19,9 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
-	<h1 class="subhead">Cancer <em>(21st June - 22nd July)</em></h1>
+	<h1 class="subhead">Cancer</h1>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -35,8 +37,11 @@
 </head>
 
 <body>
-	<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/cancer-horoscope-2023"target="_blank">2023 Horoscope for Cancer</a></p>
+<img src="1x/Asset 23.png" alt="" width="100" height="75" class="pageimage"/>
+<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/cancer-horoscope-2023"target="_blank">2023 Horoscope for Cancer</a></p>
+<p><strong>DATES</strong>: 21st June - 22nd July</p>
 <p><strong>SYMBOL</strong>: The Crab</p>
+	<img src="1x/Asset 9.png" alt="" width="150" height="324" class="pageimage"/>
 <p><strong>ARCHETYPE</strong>: The Nurturer</p>
 <p><strong>ELEMENT</strong>: Water</p>
 <p><strong>MODE</strong>: Cardinal</p>
