--- a/capricorn.html
+++ b/capricorn.html
@@ -3,7 +3,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
 	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,8 +16,12 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
+		<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 	
 </div>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -32,13 +36,18 @@
 <title>Capricorn</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-	<h1 class="subhead">Capricorn <em>(22nd December - 19th January)</em></h1>
+	<h1 class="subhead">Capricorn</h1>
 <body>
-	<p class="source"><a href="https://astrotalk.com/horoscope-2023/capricorn-horoscope-2023"target="_blank" class="horoscope">2023 Horoscope for Capricorns</a></p>
-<p><strong>SYMBOL</strong>: The Sea/Mountain Goat</p>
+	<img class=pageimage src="1x/Asset 17.png" width="160" height="170" alt=""/>
+<p class="horoscope" style="color: black"><a href="https://astrotalk.com/horoscope-2023/aquarius-horoscope-2023"target="_blank">2023 Horoscope for Capricorns</a><br>
+</p>
+<p><strong>DATES</strong>: 22nd December - 19th January</p><p><strong>SYMBOL</strong>: The Sea/Mountain Goat</p>
 <p><strong>ARCHETYPE</strong>: The Leader</p>
-<p><strong>ELEMENT</strong>: Earth</p>
+<img class=pageimage src="1x/Asset 3.png" width="400" height="240" alt=""/>
+	<p><strong>ELEMENT</strong>: Earth</p>
+	
 <p><strong>MODE</strong>: Cardinal</p>
+	
 <p><strong>HOUSE</strong>: 10th House of Careers</p>
 <p><strong>RULER</strong>: Saturn, the Planet of austerity</p>
 <p><strong>DUALITY</strong>: Yin</p>
