--- a/scorpio.html
+++ b/scorpio.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,7 +19,7 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,11 +34,14 @@
 <title>Scorpio</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-<h1 class="subhead">Scorpio <em>(23rd October - 21st November)</em></h1>
+<h1 class="subhead">Scorpio</h1>
 <body>
+<img src="1x/Asset 27.png" alt="" width="120" height="148" class="pageimage"/>
 <p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/scorpio-horoscope-2023"target="_blank">2023 Horoscope for Scorpio</a></p>
+<p><strong>DATES</strong>: 23rd October - 21st November</p>
 <p><strong>SYMBOL</strong>: The Scorpion</p>
 <p><strong>ARCHETYPE</strong>: The Alchemist</p>
+<img src="1x/Asset 13.png" alt="" width="150" height="276" class="pageimage"/>
 <p><strong>ELEMENT</strong>: Water</p>
 <p><strong>MODE</strong>: Fixed</p>
 <p><strong>HOUSE</strong>: 8th House of Death + Rebirth</p>
