--- a/taurus.html
+++ b/taurus.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,7 +19,7 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,12 +35,15 @@
 <title>Taurus</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-	<h1 class="subhead">Taurus <em>(20th April - 20th May)</em></h1>
+	<h1 class="subhead">Taurus</h1>
 
 <body>
+<img src="1x/Asset 21.png" alt="" width="110" height="112" class="pageimage"/>
 <p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/taurus-horoscope-2023"target="_blank">2023 Horoscope for Taurus</a></p>
+<p><strong>DATES</strong>: 20th April - 20th May</p>
 <p><strong>SYMBOL</strong>: The Bull</p>
 <p><strong>ARCHETYPE</strong>: The Sensualist</p>
+<img src="1x/Asset 7.png" alt="" width="300" height="247" class="pageimage"/>
 <p><strong>ELEMENT</strong>: Earth</p>
 <p><strong>MODE</strong>: Fixed</p>
 <p><strong>HOUSE</strong>: 2nd House of Values</p>
