--- a/virgo.html
+++ b/virgo.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,7 +19,7 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,11 +34,14 @@
 <title>Virgo</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-	<h1 class="subhead">Virgo <em>(23rd August - 22nd September)</em></h1>
+	<h1 class="subhead">Virgo</h1>
 
 <body>
+<img src="1x/Asset 25.png" alt="" width="100" height="128" class="pageimage"/>
 <p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/virgo-horoscope-2023"target="_blank">2023 Horoscope for Virgo</a></p>
+<p><strong>DATES</strong>: August 23rd - September 22nd</p>
 <p><strong>SYMBOL</strong>: The Maiden</p>
+	<img src="1x/Asset 11.png" alt="" width="220" height="293" class="pageimage"/>
 <p><strong>ARCHETYPE</strong>: The Healer/Analyst</p>
 <p><strong>ELEMENT</strong>: Earth</p>
 <p><strong>MODE</strong>: Mutable</p>
