--- a/leo.html
+++ b/leo.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,9 +19,9 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
-	<h1 class="subhead">Leo <em>(23rd July - 22nd August)</em></h1>
+	<h1 class="subhead">Leo</h1>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -34,9 +37,12 @@
 </head>
 
 <body>
-	<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/leo-horoscope-2023"target="_blank">2023 Horoscope for Leo</a></p>
+	<img src="1x/Asset 24.png" alt="" width="120" height="166" class="pageimage"/>
+<p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/leo-horoscope-2023"target="_blank">2023 Horoscope for Leo</a></p>
+<p><strong>DATES</strong>: 23rd July - 22nd August</p>
 <p><strong>SYMBOL</strong>: The Lion</p>
 <p><strong>ARCHETYPE</strong>: The Creative</p>
+<img src="1x/Asset 10.png" alt="" width="300" height="213" class="pageimage"/>
 <p><strong>ELEMENT</strong>: Fire</p>
 <p><strong>MODE</strong>: Fixed</p>
 <p><strong>HOUSE</strong>: 5th House of Pleasure</p>
