--- a/sagittarius.html
+++ b/sagittarius.html
@@ -2,8 +2,11 @@
 <html>
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 <head>
-	<div id="navbar"><nav class="sticky"></nav>
-  <a href="home.html">Home</a>
+	<video autoplay muted loop id="starsVideo">
+  <source src="stars.mp4" type="video/mp4">
+</video>
+<div id="navbar"><nav class="sticky"></nav>
+  <a href="index.html">Home</a>
   <a href="capricorn.html">Capricorn</a>
   <a href="aquarius.html">Aquarius</a>
   <a href="pisces.html">Pisces</a>
@@ -16,7 +19,7 @@
 	<a href="libra.html">Libra</a>
 	<a href="scorpio.html">Scorpio</a>
 	<a href="sagittarius.html">Sagittarius</a>
-	
+	<a href="file:///C|/Users/Aasiya Zahra Punjani/Documents/OCAD Year 2/Graphic Design 2/A2/More.html">More</a>
 </div>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,12 +34,15 @@
 <title>Sagittarius</title>
 <link href="Untitled-1.css" rel="stylesheet" type="text/css">
 </head>
-	<h1 class="subhead">Sagittarius <em>(22nd November - 21st December)</em></h1>
+	<h1 class="subhead">Sagittarius</h1>
 
 <body>
+<img src="1x/Asset 28.png" alt="" width="120" height="150" class="pageimage"/>
 <p class="horoscope"><a href="https://astrotalk.com/horoscope-2023/sagittarius-horoscope-2023"target="_blank">2023 Horoscope for Sagittarius</a></p>
+<p><strong>DATES</strong>: 22nd November - 21st December</p>
 <p><strong>SYMBOL</strong>: The Archer</p>
 <p><strong>ARCHETYPE</strong>: The Philosopher</p>
+<img src="1x/Asset 16.png" alt="" width="300" height="286" class="pageimage"/>
 <p><strong>ELEMENT</strong>: Fire</p>
 <p><strong>MODE</strong>: Mutable</p>
 <p><strong>HOUSE</strong>: 9th House of Wisdom</p>
